:technologist: linter